samples/_failures_safe/1761456296_4d9469_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8a51609.c: In function ‘compute_bounding_box’:
./samples/SAFE/__tmp_f8a51609.c:130:15: error: expected ‘;’ at end of input
  130 |     return box
      |               ^
      |               ;
./samples/SAFE/__tmp_f8a51609.c:130:5: error: expected declaration or statement at end of input
  130 |     return box
      |     ^~~~~~
